fix(preview): align contact items icons to baseline

--- a/src/styles/resume-pdf.css
+++ b/src/styles/resume-pdf.css
@@ -66,8 +66,8 @@
 .resume__contact-items {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 0.5em;
+  align-items: baseline;
+  gap: 0.3em;
 
   span {
     display: contents;
